Punto_3/LaplaceTransformParser.py
# Generated from LaplaceTransform.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LaplaceTransformParser ( Parser ):

    grammarFileName = "LaplaceTransform.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Laplace'", "'('", "')'", "'exp'", "'sin'", 
                     "'cos'", "'sinh'", "'cosh'", "'unit_step'", "'delta_t_tau'", 
                     "'delta_t'", "'t_n_exp'", "'unit_step_tau'", "'t_n'", 
                     "'t_q'", "'log'", "'bessel_first'", "'bessel_mod'", 
                     "'+'", "'-'", "'*'", "'/'", "'**'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PLUS", "MINUS", 
                      "MUL", "DIV", "POW", "IDENTIFIER", "NUMBER", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_laplaceExpression = 2
    RULE_expression = 3
    RULE_term = 4
    RULE_factor = 5
    RULE_base = 6
    RULE_exponent = 7
    RULE_specificFunction = 8

    ruleNames =  [ "program", "statement", "laplaceExpression", "expression", 
                   "term", "factor", "base", "exponent", "specificFunction" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    PLUS=19
    MINUS=20
    MUL=21
    DIV=22
    POW=23
    IDENTIFIER=24
    NUMBER=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LaplaceTransformParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaplaceTransformParser.StatementContext)
            else:
                return self.getTypedRuleContext(LaplaceTransformParser.StatementContext,i)


        def getRuleIndex(self):
            return LaplaceTransformParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LaplaceTransformParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 18
                self.statement()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(LaplaceTransformParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def laplaceExpression(self):
            return self.getTypedRuleContext(LaplaceTransformParser.LaplaceExpressionContext,0)


        def getRuleIndex(self):
            return LaplaceTransformParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LaplaceTransformParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.laplaceExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LaplaceExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LaplaceTransformParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LaplaceTransformParser.RULE_laplaceExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLaplaceExpression" ):
                listener.enterLaplaceExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLaplaceExpression" ):
                listener.exitLaplaceExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLaplaceExpression" ):
                return visitor.visitLaplaceExpression(self)
            else:
                return visitor.visitChildren(self)




    def laplaceExpression(self):

        localctx = LaplaceTransformParser.LaplaceExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_laplaceExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(LaplaceTransformParser.T__0)
            self.state = 29
            self.match(LaplaceTransformParser.T__1)
            self.state = 30
            self.expression()
            self.state = 31
            self.match(LaplaceTransformParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaplaceTransformParser.TermContext)
            else:
                return self.getTypedRuleContext(LaplaceTransformParser.TermContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(LaplaceTransformParser.PLUS)
            else:
                return self.getToken(LaplaceTransformParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(LaplaceTransformParser.MINUS)
            else:
                return self.getToken(LaplaceTransformParser.MINUS, i)

        def getRuleIndex(self):
            return LaplaceTransformParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = LaplaceTransformParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self.term()
            self.state = 38
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19 or _la==20:
                self.state = 34
                _la = self._input.LA(1)
                if not(_la==19 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 35
                self.term()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LaplaceTransformParser.FactorContext)
            else:
                return self.getTypedRuleContext(LaplaceTransformParser.FactorContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(LaplaceTransformParser.MUL)
            else:
                return self.getToken(LaplaceTransformParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(LaplaceTransformParser.DIV)
            else:
                return self.getToken(LaplaceTransformParser.DIV, i)

        def getRuleIndex(self):
            return LaplaceTransformParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = LaplaceTransformParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.factor()
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21 or _la==22:
                self.state = 42
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 43
                self.factor()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base(self):
            return self.getTypedRuleContext(LaplaceTransformParser.BaseContext,0)


        def POW(self):
            return self.getToken(LaplaceTransformParser.POW, 0)

        def exponent(self):
            return self.getTypedRuleContext(LaplaceTransformParser.ExponentContext,0)


        def getRuleIndex(self):
            return LaplaceTransformParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = LaplaceTransformParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.base()
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 50
                self.match(LaplaceTransformParser.POW)
                self.state = 51
                self.exponent()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def specificFunction(self):
            return self.getTypedRuleContext(LaplaceTransformParser.SpecificFunctionContext,0)


        def NUMBER(self):
            return self.getToken(LaplaceTransformParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(LaplaceTransformParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(LaplaceTransformParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LaplaceTransformParser.RULE_base

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase" ):
                listener.enterBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase" ):
                listener.exitBase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase" ):
                return visitor.visitBase(self)
            else:
                return visitor.visitChildren(self)




    def base(self):

        localctx = LaplaceTransformParser.BaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_base)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.specificFunction()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(LaplaceTransformParser.NUMBER)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.match(LaplaceTransformParser.IDENTIFIER)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.match(LaplaceTransformParser.T__1)
                self.state = 58
                self.expression()
                self.state = 59
                self.match(LaplaceTransformParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def specificFunction(self):
            return self.getTypedRuleContext(LaplaceTransformParser.SpecificFunctionContext,0)


        def NUMBER(self):
            return self.getToken(LaplaceTransformParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(LaplaceTransformParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(LaplaceTransformParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LaplaceTransformParser.RULE_exponent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExponent" ):
                listener.enterExponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExponent" ):
                listener.exitExponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExponent" ):
                return visitor.visitExponent(self)
            else:
                return visitor.visitChildren(self)




    def exponent(self):

        localctx = LaplaceTransformParser.ExponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exponent)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.specificFunction()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(LaplaceTransformParser.NUMBER)
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.match(LaplaceTransformParser.IDENTIFIER)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.match(LaplaceTransformParser.T__1)
                self.state = 67
                self.expression()
                self.state = 68
                self.match(LaplaceTransformParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecificFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(LaplaceTransformParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LaplaceTransformParser.RULE_specificFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecificFunction" ):
                listener.enterSpecificFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecificFunction" ):
                listener.exitSpecificFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpecificFunction" ):
                return visitor.visitSpecificFunction(self)
            else:
                return visitor.visitChildren(self)




    def specificFunction(self):

        localctx = LaplaceTransformParser.SpecificFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_specificFunction)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(LaplaceTransformParser.T__3)
                self.state = 73
                self.match(LaplaceTransformParser.T__1)
                self.state = 74
                self.expression()
                self.state = 75
                self.match(LaplaceTransformParser.T__2)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(LaplaceTransformParser.T__4)
                self.state = 78
                self.match(LaplaceTransformParser.T__1)
                self.state = 79
                self.expression()
                self.state = 80
                self.match(LaplaceTransformParser.T__2)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.match(LaplaceTransformParser.T__5)
                self.state = 83
                self.match(LaplaceTransformParser.T__1)
                self.state = 84
                self.expression()
                self.state = 85
                self.match(LaplaceTransformParser.T__2)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.match(LaplaceTransformParser.T__6)
                self.state = 88
                self.match(LaplaceTransformParser.T__1)
                self.state = 89
                self.expression()
                self.state = 90
                self.match(LaplaceTransformParser.T__2)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.match(LaplaceTransformParser.T__7)
                self.state = 93
                self.match(LaplaceTransformParser.T__1)
                self.state = 94
                self.expression()
                self.state = 95
                self.match(LaplaceTransformParser.T__2)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 6)
                self.state = 97
                self.match(LaplaceTransformParser.T__8)
                self.state = 98
                self.match(LaplaceTransformParser.T__1)
                self.state = 99
                self.expression()
                self.state = 100
                self.match(LaplaceTransformParser.T__2)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.match(LaplaceTransformParser.T__9)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 8)
                self.state = 103
                self.match(LaplaceTransformParser.T__10)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 9)
                self.state = 104
                self.match(LaplaceTransformParser.T__11)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 10)
                self.state = 105
                self.match(LaplaceTransformParser.T__12)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 11)
                self.state = 106
                self.match(LaplaceTransformParser.T__13)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 12)
                self.state = 107
                self.match(LaplaceTransformParser.T__14)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 13)
                self.state = 108
                self.match(LaplaceTransformParser.T__15)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 14)
                self.state = 109
                self.match(LaplaceTransformParser.T__16)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 15)
                self.state = 110
                self.match(LaplaceTransformParser.T__17)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





